--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ entrypoints==0.3
 ipykernel==5.3.0
 ipython==7.14.0
 ipython-genutils==0.2.0
+ipywidgets==7.5.1
 jedi==0.17.0
 Jinja2==2.11.2
 jsonschema==3.2.0
@@ -23,6 +24,7 @@ matplotlib==3.2.1
 mistune==0.8.4
 nbconvert==5.6.1
 nbformat==5.0.6
+notebook==6.0.3
 numpy==1.18.4
 packaging==20.4
 pandocfilters==1.4.2
@@ -46,3 +48,4 @@ traitlets==4.3.3
 voila==0.1.21
 wcwidth==0.1.9
 webencodings==0.5.1
+widgetsnbextension==3.5.1
